--- a/app/src/main/res/layout/fragment_action_details.xml
+++ b/app/src/main/res/layout/fragment_action_details.xml
@@ -35,7 +35,7 @@
             android:fontFamily="@font/mulish_bold"
             android:text="@string/actions"
             android:textColor="@color/black"
-            android:textSize="@dimen/_15sdp"
+            android:textSize="@dimen/_15ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -48,8 +48,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/mulish_regular"
-            android:textSize="@dimen/_12sdp"
             android:textColor="@color/text_gray_color"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
