3328 After uploading the file, the quote details page switches to the dashboard screen
_resolved the Uploading issue by removing dismiss of the dialog
3329 Maintain uniformity in order details screen

Given some changes is ui to add colon to maintain the order

--- a/app/src/main/res/layout/quote_brief_dialog.xml
+++ b/app/src/main/res/layout/quote_brief_dialog.xml
@@ -684,6 +684,7 @@
                                     android:textSize="@dimen/_12sdp" />
 
                                 <TextView
+                                    android:id="@+id/review_comment"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1.5"
