TASK - 3334(Dashboard link not working in side menu)
- Refresh dashboard page while clicked dashboard text inside sideNav bar.
- Added progress quote details dialog and full screen dialogs.

--- a/app/src/main/res/layout/spinners_list.xml
+++ b/app/src/main/res/layout/spinners_list.xml
@@ -6,5 +6,6 @@
     android:paddingStart="@dimen/_2sdp"
     android:paddingTop="@dimen/_8sdp"
     android:paddingBottom="@dimen/_6sdp"
+    android:paddingEnd="@dimen/_23sdp"
     android:textColor="@color/black"
-    android:textSize="@dimen/_14ssp" />
+    android:textSize="@dimen/_14ssp"/>
