--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -46,6 +46,7 @@
                     android:layout_marginTop="@dimen/_2sdp"
                     android:fontFamily="@font/poppins_regular"
                     android:gravity="end"
+                    android:visibility="invisible"
                     android:text="@string/switch_to_modify_slots_availability"
                     android:textAlignment="textEnd"
                     android:textColor="@color/black"
@@ -66,6 +67,7 @@
                     android:background="@drawable/toggle_track"
                     android:foregroundGravity="center"
                     android:gravity="center"
+                    android:visibility="invisible"
                     android:scaleX="1"
                     android:scaleY="1"
                     android:textOff=""
