--- a/app/src/main/res/layout/fragment_view_order_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_view_order_details_dialog.xml
@@ -15,10 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:id="@+id/view_order_details"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -224,25 +224,30 @@
                                 android:layout_marginLeft="@dimen/_8sdp"
                                 android:layout_marginTop="@dimen/_3sdp"
                                 android:layout_marginEnd="@dimen/_18sdp"
-                                android:weightSum="3">
+                                android:weightSum="4">
 
                                 <TextView
                                     android:id="@+id/tx_service_date"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="2"
                                     android:fontFamily="@font/mulish_regular"
                                     android:text="@string/service_date"
                                     android:textSize="@dimen/_12sdp" />
-
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="0.10"
+                                    android:fontFamily="@font/mulish_regular"
+                                    android:text="@string/colon_space"
+                                    android:textSize="@dimen/_12sdp" />
                                 <TextView
                                     android:id="@+id/et_service_date"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="1.90"
                                     android:fontFamily="@font/mulish_regular"
                                     android:paddingStart="@dimen/_3sdp"
-
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/_12sdp" />
                             </LinearLayout>
@@ -254,22 +259,29 @@
                                 android:layout_marginLeft="@dimen/_8sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
                                 android:layout_marginEnd="@dimen/_18sdp"
-                                android:weightSum="3">
+                                android:weightSum="4">
 
                                 <TextView
                                     android:id="@+id/tx_bid_cut_off_date"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="2"
                                     android:fontFamily="@font/mulish_regular"
                                     android:text="@string/bid_cut_off_date"
+                                    android:textSize="@dimen/_12sdp" />
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="0.10"
+                                    android:fontFamily="@font/mulish_regular"
+                                    android:text="@string/colon_space"
                                     android:textSize="@dimen/_12sdp" />
 
                                 <TextView
                                     android:id="@+id/et_bid_cut_off_date"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="1.90"
                                     android:fontFamily="@font/mulish_regular"
                                     android:paddingStart="@dimen/_3sdp"
                                     android:textColor="@color/black"
@@ -282,22 +294,28 @@
                                 android:layout_marginStart="@dimen/_18sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
                                 android:layout_marginEnd="@dimen/_18sdp"
-                                android:weightSum="3">
+                                android:weightSum="4">
 
                                 <TextView
                                     android:id="@+id/tx_estimation_budget"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="2"
                                     android:fontFamily="@font/mulish_regular"
                                     android:text="@string/estimation_budget"
                                     android:textSize="@dimen/_12sdp" />
-
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="0.10"
+                                    android:fontFamily="@font/mulish_regular"
+                                    android:text="@string/colon_space"
+                                    android:textSize="@dimen/_12sdp" />
                                 <TextView
                                     android:id="@+id/et_estimation_budget"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="1.90"
                                     android:fontFamily="@font/mulish_regular"
                                     android:paddingStart="@dimen/_3sdp"
                                     android:textColor="@color/black"
@@ -311,22 +329,28 @@
                                 android:layout_marginStart="@dimen/_18sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
                                 android:layout_marginEnd="@dimen/_18sdp"
-                                android:weightSum="3">
+                                android:weightSum="4">
 
                                 <TextView
                                     android:id="@+id/tx_service_radius"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="2"
                                     android:fontFamily="@font/mulish_regular"
                                     android:text="@string/service_radius"
                                     android:textSize="@dimen/_12sdp" />
-
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="0.10"
+                                    android:fontFamily="@font/mulish_regular"
+                                    android:text="@string/colon_space"
+                                    android:textSize="@dimen/_12sdp" />
                                 <TextView
                                     android:id="@+id/et_service_radius"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="1.90"
                                     android:fontFamily="@font/mulish_regular"
                                     android:paddingStart="@dimen/_3sdp"
                                     android:textColor="@color/black"
@@ -339,22 +363,28 @@
                                 android:layout_marginStart="@dimen/_18sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
                                 android:layout_marginEnd="@dimen/_18sdp"
-                                android:weightSum="3">
+                                android:weightSum="4">
 
                                 <TextView
                                     android:id="@+id/tx_prefered_time_slot"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="2"
                                     android:fontFamily="@font/mulish_regular"
                                     android:text="@string/prefered_time_slot"
                                     android:textSize="@dimen/_12sdp" />
-
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="0.10"
+                                    android:fontFamily="@font/mulish_regular"
+                                    android:text="@string/colon_space"
+                                    android:textSize="@dimen/_12sdp" />
                                 <TextView
                                     android:id="@+id/et_prefered_time_slot"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.5"
+                                    android:layout_weight="1.90"
                                     android:fontFamily="@font/mulish_regular"
                                     android:paddingStart="@dimen/_3sdp"
                                     android:textColor="@color/black"
@@ -409,7 +439,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
         <ProgressBar
             android:id="@+id/progress_bar"
