--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -81,10 +81,8 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_33sdp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/shapes"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shapes">
 
                     <Spinner
                         android:id="@+id/spn_allServices"
@@ -99,8 +97,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_33sdp"
-                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_18sdp"
                     android:background="@drawable/shapes">
 
@@ -108,7 +105,6 @@
                         android:id="@+id/spn_Branches"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:autofillHints="All Services"
                         android:background="@drawable/spinner"
                         android:popupBackground="@color/white"
                         android:spinnerMode="dropdown" />
