--- a/app/src/main/res/layout/fragment_view_order_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_view_order_details_dialog.xml
@@ -27,7 +27,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/quote_brief_dialog_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/_18sdp"
                     android:layout_marginTop="@dimen/_11sdp"
                     android:layout_marginEnd="@dimen/_18sdp"
@@ -423,7 +423,8 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/_8sdp"
                             android:orientation="vertical">
 
                             <TextView
@@ -438,7 +439,7 @@
                             <ListView
                                 android:id="@+id/ques_list"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:scrollbars="none" />
                         </LinearLayout>
                     </LinearLayout>
