--- a/app/src/main/res/layout/dialog_no_internet.xml
+++ b/app/src/main/res/layout/dialog_no_internet.xml
@@ -26,9 +26,9 @@
             android:gravity="center"
             android:paddingStart="@dimen/_28sdp"
             android:paddingEnd="@dimen/_28sdp"
-            android:text="No Internet Connection Available"
+            android:text="@string/no_internet_connection_available"
             android:textColor="@color/gray_text"
-            android:textSize="@dimen/_15sdp"
+            android:textSize="@dimen/_15ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,9 +43,9 @@
             android:gravity="center"
             android:paddingStart="@dimen/_40sdp"
             android:paddingEnd="@dimen/_40sdp"
-            android:text="Your device is not connected to internet, Please make sure your connection is working."
+            android:text="@string/your_device_is_not_connected_to_internet_please_make_sure_your_connection_is_working"
             android:textColor="@color/gray_text"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_11ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,10 +62,10 @@
             android:background="@drawable/custom_button_corner_ok"
             android:fontFamily="@font/mulish_bold"
             android:gravity="center"
-            android:text="Try Again"
+            android:text="@string/try_again"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_11ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
